--- a/files/page1317948body.html
+++ b/files/page1317948body.html
@@ -17,7 +17,7 @@
               </div>                            <div class="t422__descr t-descr t-descr_sm " field="descr"  style="">
                 В Приложении содержится информация правового характера по вопросам в сфере жилищно-коммунального хозяйства. <br /><br /> Приложение включает в себя 10 информационно-справочных (пособий) по отдельным правовым вопросам в сфере ЖКХ. <br />
               </div>                              <div class="t422__btn-wrapper ">
-              	  <a href="http://tilda.cc" target="" class="t-btn t-btn_sm" style="color:#000000;border:1px solid #000000;border-radius:21px; -moz-border-radius:21px; -webkit-border-radius:21px;"><table style="width:100%; height:100%;"><tr><td>ПЕРЕЙТИ</td></tr></table></a>
+              	  <a href="/zkh/o_prilozenii" target="" class="t-btn t-btn_sm" style="color:#000000;border:1px solid #000000;border-radius:21px; -moz-border-radius:21px; -webkit-border-radius:21px;"><table style="width:100%; height:100%;"><tr><td>ПЕРЕЙТИ</td></tr></table></a>
             	</div>
                           </div>
           </div>
