--- a/files/page1351798body.html
+++ b/files/page1351798body.html
@@ -1,6 +1,57 @@
 <!--allrecords-->
 <div id="allrecords" class="t-records" data-hook="blocks-collection-content-node" data-tilda-project-id="293604" data-tilda-page-id="1351798" data-tilda-page-alias="zkh/4" data-tilda-formskey="970f9e2c6c552c5b2a73c4b3835258a7" >
 
+<div id="rec28369260" class="r" style="padding-top:75px;padding-bottom:75px; " data-animationappear="off" data-record-type="422"   >
+<!-- T422 -->
+<div class="t422">
+  <div class="t422__container t-container">
+    <div class="t422__wrapper t-width_12 t422__prefix t-prefix_1">
+      <div class="t422__img-mobile t-col t-bgimg" bgimgfield="img" data-original="images/tild3861-6562-4332-b662-396236303036__5c9ab86ab02e313d8618e12b4c205bb1.jpg" style="background-image: url('images/tild3861-6562-4332-b662-396236303036__-__resize__20x__5c9ab86ab02e313d8618e12b4c205bb1.jpg');"></div>
+              <div class="t422__img t422__col  t422__col_3 t-col t-bgimg" bgimgfield="img" data-original="images/tild3861-6562-4332-b662-396236303036__5c9ab86ab02e313d8618e12b4c205bb1.jpg" style="background-image: url('images/tild3861-6562-4332-b662-396236303036__-__resize__20x__5c9ab86ab02e313d8618e12b4c205bb1.jpg'); "></div>
+            <div class="t422__text t422__col  t422__col_7 t-col  t422__text_right" style="border-color: #e6e6e6; border-width: 1px; ">
+        <div class="t422__text_mobile t-col" style="border-color: #e6e6e6; border-width: 1px;">
+        <div class="t422__textwrapper">
+            <div class="t422__cell t-cell">
+                            <div class="t422__uptitle t-uptitle t-uptitle_md t-uppercase " field="subtitle" style="">
+                Информационно-справочное пособие № 4
+        	  </div>                            <div class="t422__title t-heading t-heading_md " field="title"  style="">
+                <strong>Учет потребления коммунальных ресурсов</strong>
+              </div>                            <div class="t422__descr t-descr t-descr_sm " field="descr"  style="">
+                Оснащение жилого или нежилого помещения приборами учета, ввод установленных приборов учета в эксплуатацию, их надлежащая техническая эксплуатация, сохранность и своевременная замена должны быть обеспечены собственником жилого или нежилого помещения. <br />
+              </div>                              <div class="t422__btn-wrapper ">
+              	  <a href="http://tilda.cc" target="" class="t-btn t-btn_sm" style="color:#000000;border:1px solid #000000;border-radius:21px; -moz-border-radius:21px; -webkit-border-radius:21px;"><table style="width:100%; height:100%;"><tr><td>ПЕРЕЙТИ</td></tr></table></a>
+            	</div>
+                          </div>
+          </div>
+        </div>
+      </div>
+          </div>
+  </div>
+</div>
+<script type="text/javascript">
+$(document).ready(function(){
+  setInterval(function(){t422_setHeight('28369260');}, 5000);
+  t422_setHeight('28369260');
+});
+var t422__doResize;
+$(window).resize(function(){
+  clearTimeout(t422__doResize);
+    t422__doResize = setTimeout(function() {
+      t422_setHeight('28369260');
+    }, 200);
+});
+$(window).load(function(){
+  t422_setHeight('28369260');
+});
+  
+$('.t422').bind('displayChanged',function(){
+	t422_setHeight('28369260');
+});  
+</script>
+
+</div>
+
+
 <div id="rec28092850" class="r" style="padding-top:28px;padding-bottom:28px; "  data-record-type="40"   >
 <!-- T026 -->
 <div class="t026">
@@ -40,6 +91,79 @@
 		</div>
 	</div>
 </div>
+</div>
+
+
+<div id="rec28369290" class="r" style="padding-top:75px;padding-bottom:75px; " data-animationappear="off" data-record-type="422"   >
+<!-- T422 -->
+<div class="t422">
+  <div class="t422__container t-container">
+    <div class="t422__wrapper t-width_12 t422__prefix t-prefix_1">
+      <div class="t422__img-mobile t-col t-bgimg" bgimgfield="img" data-original="images/tild6437-3264-4538-b530-396265376336__plategka.jpg" style="background-image: url('images/tild6437-3264-4538-b530-396265376336__-__resize__20x__plategka.jpg');"></div>
+              <div class="t422__img t422__col  t422__col_3 t-col t-bgimg" bgimgfield="img" data-original="images/tild6437-3264-4538-b530-396265376336__plategka.jpg" style="background-image: url('images/tild6437-3264-4538-b530-396265376336__-__resize__20x__plategka.jpg'); "></div>
+            <div class="t422__text t422__col  t422__col_7 t-col  t422__text_right" style="border-color: #e6e6e6; border-width: 1px; ">
+        <div class="t422__text_mobile t-col" style="border-color: #e6e6e6; border-width: 1px;">
+        <div class="t422__textwrapper">
+            <div class="t422__cell t-cell">
+                            <div class="t422__uptitle t-uptitle t-uptitle_md t-uppercase " field="subtitle" style="">
+                Информационно-справочное пособие № 5
+        	  </div>                            <div class="t422__title t-heading t-heading_md " field="title"  style="">
+                <div style="font-size:24px;" data-customstyle="yes"><strong></strong>Субсидии, компенсации расходов на оплату жилого помещения и (или) коммунальных услуг отдельным категориям граждан.  Социальные выплаты на приобретение (строительство) жилья отдельным категориям граждан<strong></strong></div>
+              </div>                            <div class="t422__descr t-descr t-descr_sm " field="descr"  style="">
+                Порядок предоставления субсидий на оплату жилого помещения и коммунальных услуг регламентируется Постановлением Правительства РФ от 14 декабря 2005 г. N 761, которым утверждены Правила предоставления субсидий на оплату жилого помещения и коммунальных услуг.
+              </div>                              <div class="t422__btn-wrapper ">
+              	  <a href="http://tilda.cc" target="" class="t-btn t-btn_sm" style="color:#000000;border:1px solid #000000;border-radius:21px; -moz-border-radius:21px; -webkit-border-radius:21px;"><table style="width:100%; height:100%;"><tr><td>ПЕРЕЙТИ</td></tr></table></a>
+            	</div>
+                          </div>
+          </div>
+        </div>
+      </div>
+          </div>
+  </div>
+</div>
+<script type="text/javascript">
+$(document).ready(function(){
+  setInterval(function(){t422_setHeight('28369290');}, 5000);
+  t422_setHeight('28369290');
+});
+var t422__doResize;
+$(window).resize(function(){
+  clearTimeout(t422__doResize);
+    t422__doResize = setTimeout(function() {
+      t422_setHeight('28369290');
+    }, 200);
+});
+$(window).load(function(){
+  t422_setHeight('28369290');
+});
+  
+$('.t422').bind('displayChanged',function(){
+	t422_setHeight('28369290');
+});  
+</script>
+
+</div>
+
+
+<div id="rec28369206" class="r" style="padding-top:0px;padding-bottom:15px; "  data-record-type="191"   >
+<!-- T142 -->
+<div class="t142">
+	<div class="t-container_100">
+	  <div class="t142__wrapone">
+		<div class="t142__wraptwo">
+          <a href="index.html" target=""><div class="t-btn t142__submit " style="color:#ffffff;border:3px solid #922e74;background-color:#922e74;border-radius:30px; -moz-border-radius:30px; -webkit-border-radius:30px;">ВЕРНУТЬСЯ В МЕНЮ</div></a>
+        </div>
+	  </div>
+	</div>
+</div>
+
+<script type="text/javascript">
+  $(document).ready(function() {
+    t142_checkSize('28369206');
+  });
+</script>
+
+
 </div>
 
 </div>
