--- a/files/page1351830body.html
+++ b/files/page1351830body.html
@@ -1,6 +1,57 @@
 <!--allrecords-->
 <div id="allrecords" class="t-records" data-hook="blocks-collection-content-node" data-tilda-project-id="293604" data-tilda-page-id="1351830" data-tilda-page-alias="zkh/5" data-tilda-formskey="970f9e2c6c552c5b2a73c4b3835258a7" >
 
+<div id="rec28369374" class="r" style="padding-top:75px;padding-bottom:75px; " data-animationappear="off" data-record-type="422"   >
+<!-- T422 -->
+<div class="t422">
+  <div class="t422__container t-container">
+    <div class="t422__wrapper t-width_12 t422__prefix t-prefix_1">
+      <div class="t422__img-mobile t-col t-bgimg" bgimgfield="img" data-original="images/tild3234-6433-4132-a665-613963643237__plategka.jpg" style="background-image: url('images/tild3234-6433-4132-a665-613963643237__-__resize__20x__plategka.jpg');"></div>
+              <div class="t422__img t422__col  t422__col_3 t-col t-bgimg" bgimgfield="img" data-original="images/tild3234-6433-4132-a665-613963643237__plategka.jpg" style="background-image: url('images/tild3234-6433-4132-a665-613963643237__-__resize__20x__plategka.jpg'); "></div>
+            <div class="t422__text t422__col  t422__col_7 t-col  t422__text_right" style="border-color: #e6e6e6; border-width: 1px; ">
+        <div class="t422__text_mobile t-col" style="border-color: #e6e6e6; border-width: 1px;">
+        <div class="t422__textwrapper">
+            <div class="t422__cell t-cell">
+                            <div class="t422__uptitle t-uptitle t-uptitle_md t-uppercase " field="subtitle" style="">
+                Информационно-справочное пособие № 5
+        	  </div>                            <div class="t422__title t-heading t-heading_md " field="title"  style="">
+                <div style="font-size:24px;" data-customstyle="yes"><strong></strong>Субсидии, компенсации расходов на оплату жилого помещения и (или) коммунальных услуг отдельным категориям граждан.  Социальные выплаты на приобретение (строительство) жилья отдельным категориям граждан<strong></strong></div>
+              </div>                            <div class="t422__descr t-descr t-descr_sm " field="descr"  style="">
+                Порядок предоставления субсидий на оплату жилого помещения и коммунальных услуг регламентируется Постановлением Правительства РФ от 14 декабря 2005 г. N 761, которым утверждены Правила предоставления субсидий на оплату жилого помещения и коммунальных услуг.
+              </div>                              <div class="t422__btn-wrapper ">
+              	  <a href="http://tilda.cc" target="" class="t-btn t-btn_sm" style="color:#000000;border:1px solid #000000;border-radius:21px; -moz-border-radius:21px; -webkit-border-radius:21px;"><table style="width:100%; height:100%;"><tr><td>ПЕРЕЙТИ</td></tr></table></a>
+            	</div>
+                          </div>
+          </div>
+        </div>
+      </div>
+          </div>
+  </div>
+</div>
+<script type="text/javascript">
+$(document).ready(function(){
+  setInterval(function(){t422_setHeight('28369374');}, 5000);
+  t422_setHeight('28369374');
+});
+var t422__doResize;
+$(window).resize(function(){
+  clearTimeout(t422__doResize);
+    t422__doResize = setTimeout(function() {
+      t422_setHeight('28369374');
+    }, 200);
+});
+$(window).load(function(){
+  t422_setHeight('28369374');
+});
+  
+$('.t422').bind('displayChanged',function(){
+	t422_setHeight('28369374');
+});  
+</script>
+
+</div>
+
+
 <div id="rec28093568" class="r" style="padding-top:28px;padding-bottom:28px; "  data-record-type="40"   >
 <!-- T026 -->
 <div class="t026">
@@ -40,6 +91,79 @@
 		</div>
 	</div>
 </div>
+</div>
+
+
+<div id="rec28369480" class="r" style="padding-top:75px;padding-bottom:75px; " data-animationappear="off" data-record-type="422"   >
+<!-- T422 -->
+<div class="t422">
+  <div class="t422__container t-container">
+    <div class="t422__wrapper t-width_12 t422__prefix t-prefix_1">
+      <div class="t422__img-mobile t-col t-bgimg" bgimgfield="img" data-original="images/tild3632-3366-4564-b766-323861306665__noroot.jpg" style="background-image: url('images/tild3632-3366-4564-b766-323861306665__-__resize__20x__noroot.jpg');"></div>
+              <div class="t422__img t422__col  t422__col_3 t-col t-bgimg" bgimgfield="img" data-original="images/tild3632-3366-4564-b766-323861306665__noroot.jpg" style="background-image: url('images/tild3632-3366-4564-b766-323861306665__-__resize__20x__noroot.jpg'); "></div>
+            <div class="t422__text t422__col  t422__col_7 t-col  t422__text_right" style="border-color: #e6e6e6; border-width: 1px; ">
+        <div class="t422__text_mobile t-col" style="border-color: #e6e6e6; border-width: 1px;">
+        <div class="t422__textwrapper">
+            <div class="t422__cell t-cell">
+                            <div class="t422__uptitle t-uptitle t-uptitle_md t-uppercase " field="subtitle" style="">
+                Информационно-справочное пособие № 6
+        	  </div>                            <div class="t422__title t-heading t-heading_md " field="title"  style="">
+                <strong>Капитальный ремонт общего имущества собственников помещений в многоквартирных жилых домах</strong>
+              </div>                            <div class="t422__descr t-descr t-descr_sm " field="descr"  style="">
+                Для обеспечения своевременного проведения капитального ремонта субъектами РФ формируются и утверждаются региональные программы капитального ремонта.
+              </div>                              <div class="t422__btn-wrapper ">
+              	  <a href="http://tilda.cc" target="" class="t-btn t-btn_sm" style="color:#000000;border:1px solid #000000;border-radius:21px; -moz-border-radius:21px; -webkit-border-radius:21px;"><table style="width:100%; height:100%;"><tr><td>ПЕРЕЙТИ</td></tr></table></a>
+            	</div>
+                          </div>
+          </div>
+        </div>
+      </div>
+          </div>
+  </div>
+</div>
+<script type="text/javascript">
+$(document).ready(function(){
+  setInterval(function(){t422_setHeight('28369480');}, 5000);
+  t422_setHeight('28369480');
+});
+var t422__doResize;
+$(window).resize(function(){
+  clearTimeout(t422__doResize);
+    t422__doResize = setTimeout(function() {
+      t422_setHeight('28369480');
+    }, 200);
+});
+$(window).load(function(){
+  t422_setHeight('28369480');
+});
+  
+$('.t422').bind('displayChanged',function(){
+	t422_setHeight('28369480');
+});  
+</script>
+
+</div>
+
+
+<div id="rec28369488" class="r" style="padding-top:0px;padding-bottom:15px; "  data-record-type="191"   >
+<!-- T142 -->
+<div class="t142">
+	<div class="t-container_100">
+	  <div class="t142__wrapone">
+		<div class="t142__wraptwo">
+          <a href="index.html" target=""><div class="t-btn t142__submit " style="color:#ffffff;border:3px solid #922e74;background-color:#922e74;border-radius:30px; -moz-border-radius:30px; -webkit-border-radius:30px;">ВЕРНУТЬСЯ В МЕНЮ</div></a>
+        </div>
+	  </div>
+	</div>
+</div>
+
+<script type="text/javascript">
+  $(document).ready(function() {
+    t142_checkSize('28369488');
+  });
+</script>
+
+
 </div>
 
 </div>
