--- a/files/page1352162body.html
+++ b/files/page1352162body.html
@@ -1,6 +1,57 @@
 <!--allrecords-->
 <div id="allrecords" class="t-records" data-hook="blocks-collection-content-node" data-tilda-project-id="293604" data-tilda-page-id="1352162" data-tilda-page-alias="zkh/10" data-tilda-formskey="970f9e2c6c552c5b2a73c4b3835258a7" >
 
+<div id="rec28370094" class="r" style="padding-top:75px;padding-bottom:75px; " data-animationappear="off" data-record-type="422"   >
+<!-- T422 -->
+<div class="t422">
+  <div class="t422__container t-container">
+    <div class="t422__wrapper t-width_12 t422__prefix t-prefix_1">
+      <div class="t422__img-mobile t-col t-bgimg" bgimgfield="img" data-original="images/tild3763-3833-4361-a566-313463663731__razmery_subsidiy_po_oplate_schetov_zhkh_1_14170336400x400.jpg" style="background-image: url('images/tild3763-3833-4361-a566-313463663731__-__resize__20x__razmery_subsidiy_po_oplate_schetov_ZhKH_1_14170336400x400.jpg');"></div>
+              <div class="t422__img t422__col  t422__col_3 t-col t-bgimg" bgimgfield="img" data-original="images/tild3763-3833-4361-a566-313463663731__razmery_subsidiy_po_oplate_schetov_zhkh_1_14170336400x400.jpg" style="background-image: url('images/tild3763-3833-4361-a566-313463663731__-__resize__20x__razmery_subsidiy_po_oplate_schetov_ZhKH_1_14170336400x400.jpg'); "></div>
+            <div class="t422__text t422__col  t422__col_7 t-col  t422__text_right" style="border-color: #e6e6e6; border-width: 1px; ">
+        <div class="t422__text_mobile t-col" style="border-color: #e6e6e6; border-width: 1px;">
+        <div class="t422__textwrapper">
+            <div class="t422__cell t-cell">
+                            <div class="t422__uptitle t-uptitle t-uptitle_md t-uppercase " field="subtitle" style="">
+                 Информационно-справочное пособие № 10
+        	  </div>                            <div class="t422__title t-heading t-heading_md " field="title"  style="">
+                 <strong>Налоговые льготы в сфере ЖКХ</strong>
+              </div>                            <div class="t422__descr t-descr t-descr_sm " field="descr"  style="">
+                 Какие категории граждан имеют право на предоставление налоговой льготы? <br />
+              </div>                              <div class="t422__btn-wrapper ">
+              	  <a href="http://tilda.cc" target="" class="t-btn t-btn_sm" style="color:#000000;border:1px solid #000000;border-radius:21px; -moz-border-radius:21px; -webkit-border-radius:21px;"><table style="width:100%; height:100%;"><tr><td>ПЕРЕЙТИ</td></tr></table></a>
+            	</div>
+                          </div>
+          </div>
+        </div>
+      </div>
+          </div>
+  </div>
+</div>
+<script type="text/javascript">
+$(document).ready(function(){
+  setInterval(function(){t422_setHeight('28370094');}, 5000);
+  t422_setHeight('28370094');
+});
+var t422__doResize;
+$(window).resize(function(){
+  clearTimeout(t422__doResize);
+    t422__doResize = setTimeout(function() {
+      t422_setHeight('28370094');
+    }, 200);
+});
+$(window).load(function(){
+  t422_setHeight('28370094');
+});
+  
+$('.t422').bind('displayChanged',function(){
+	t422_setHeight('28370094');
+});  
+</script>
+
+</div>
+
+
 <div id="rec28099354" class="r" style="padding-top:28px;padding-bottom:28px; "  data-record-type="40"   >
 <!-- T026 -->
 <div class="t026">
@@ -31,6 +82,53 @@
 </div>
 
 
+<div id="rec28370224" class="r" style="padding-top:75px;padding-bottom:75px; " data-animationappear="off" data-record-type="422"   >
+<!-- T422 -->
+<div class="t422">
+  <div class="t422__container t-container">
+    <div class="t422__wrapper t-width_12 t422__prefix t-prefix_1">
+      <div class="t422__img-mobile t-col t-bgimg" bgimgfield="img" data-original="images/tild3262-3063-4866-b437-373236363639__imgzak.jpg" style="background-image: url('images/tild3262-3063-4866-b437-373236363639__-__resize__20x__imgzak.jpg');"></div>
+              <div class="t422__img t422__col  t422__col_3 t-col t-bgimg" bgimgfield="img" data-original="images/tild3262-3063-4866-b437-373236363639__imgzak.jpg" style="background-image: url('images/tild3262-3063-4866-b437-373236363639__-__resize__20x__imgzak.jpg'); "></div>
+            <div class="t422__text t422__col  t422__col_7 t-col  t422__text_right" style="border-color: #e6e6e6; border-width: 1px; ">
+        <div class="t422__text_mobile t-col" style="border-color: #e6e6e6; border-width: 1px;">
+        <div class="t422__textwrapper">
+            <div class="t422__cell t-cell">
+                                          <div class="t422__title t-heading t-heading_md " field="title"  style="">
+                Правовые основы в сфере ЖКХ: законодательство
+              </div>                                            <div class="t422__btn-wrapper ">
+              	  <a href="http://tilda.cc" target="" class="t-btn t-btn_sm" style="color:#000000;border:1px solid #000000;border-radius:21px; -moz-border-radius:21px; -webkit-border-radius:21px;"><table style="width:100%; height:100%;"><tr><td>ПЕРЕЙТИ</td></tr></table></a>
+            	</div>
+                          </div>
+          </div>
+        </div>
+      </div>
+          </div>
+  </div>
+</div>
+<script type="text/javascript">
+$(document).ready(function(){
+  setInterval(function(){t422_setHeight('28370224');}, 5000);
+  t422_setHeight('28370224');
+});
+var t422__doResize;
+$(window).resize(function(){
+  clearTimeout(t422__doResize);
+    t422__doResize = setTimeout(function() {
+      t422_setHeight('28370224');
+    }, 200);
+});
+$(window).load(function(){
+  t422_setHeight('28370224');
+});
+  
+$('.t422').bind('displayChanged',function(){
+	t422_setHeight('28370224');
+});  
+</script>
+
+</div>
+
+
 <div id="rec28099360" class="r" style="padding-top:0px;padding-bottom:60px; "  data-record-type="106"   >
 <!-- T004 -->
 <div class="t004">
@@ -40,6 +138,28 @@
 		</div>
 	</div>
 </div>
+</div>
+
+
+<div id="rec28370042" class="r" style="padding-top:0px;padding-bottom:15px; "  data-record-type="191"   >
+<!-- T142 -->
+<div class="t142">
+	<div class="t-container_100">
+	  <div class="t142__wrapone">
+		<div class="t142__wraptwo">
+          <a href="index.html" target=""><div class="t-btn t142__submit " style="color:#ffffff;border:3px solid #922e74;background-color:#922e74;border-radius:30px; -moz-border-radius:30px; -webkit-border-radius:30px;">ВЕРНУТЬСЯ В МЕНЮ</div></a>
+        </div>
+	  </div>
+	</div>
+</div>
+
+<script type="text/javascript">
+  $(document).ready(function() {
+    t142_checkSize('28370042');
+  });
+</script>
+
+
 </div>
 
 </div>
