--- a/files/page1318394body.html
+++ b/files/page1318394body.html
@@ -1,5 +1,54 @@
 <!--allrecords-->
-<div id="allrecords" class="t-records" data-hook="blocks-collection-content-node" data-tilda-project-id="293604" data-tilda-page-id="1318394"  data-tilda-formskey="970f9e2c6c552c5b2a73c4b3835258a7" >
+<div id="allrecords" class="t-records" data-hook="blocks-collection-content-node" data-tilda-project-id="293604" data-tilda-page-id="1318394" data-tilda-page-alias="zkh/o_prilozenii" data-tilda-formskey="970f9e2c6c552c5b2a73c4b3835258a7" >
+
+<div id="rec28365672" class="r" style="padding-top:75px;padding-bottom:75px; " data-animationappear="off" data-record-type="422"   >
+<!-- T422 -->
+<div class="t422">
+  <div class="t422__container t-container">
+    <div class="t422__wrapper t-width_12 t422__prefix t-prefix_1">
+      <div class="t422__img-mobile t-col t-bgimg" bgimgfield="img" data-original="images/tild3039-3232-4865-a463-663266633132__02d9addd4ab3a11ed157a59d5032984a.jpg" style="background-image: url('images/tild3039-3232-4865-a463-663266633132__-__resize__20x__02d9addd4ab3a11ed157a59d5032984a.jpg');"></div>
+              <div class="t422__img t422__col  t422__col_3 t-col t-bgimg" bgimgfield="img" data-original="images/tild3039-3232-4865-a463-663266633132__02d9addd4ab3a11ed157a59d5032984a.jpg" style="background-image: url('images/tild3039-3232-4865-a463-663266633132__-__resize__20x__02d9addd4ab3a11ed157a59d5032984a.jpg'); "></div>
+            <div class="t422__text t422__col  t422__col_7 t-col  t422__text_right" style="border-color: #e6e6e6; border-width: 1px; ">
+        <div class="t422__text_mobile t-col" style="border-color: #e6e6e6; border-width: 1px;">
+        <div class="t422__textwrapper">
+            <div class="t422__cell t-cell">
+                                          <div class="t422__title t-heading t-heading_md " field="title"  style="">
+                О программе<br />
+              </div>                            <div class="t422__descr t-descr t-descr_sm " field="descr"  style="">
+                В Приложении содержится информация правового характера по вопросам в сфере жилищно-коммунального хозяйства. <br /><br /> Приложение включает в себя 10 информационно-справочных (пособий) по отдельным правовым вопросам в сфере ЖКХ. <br />
+              </div>                              <div class="t422__btn-wrapper ">
+              	  <a href="/zkh/o_prilozenii" target="" class="t-btn t-btn_sm" style="color:#000000;border:1px solid #000000;border-radius:21px; -moz-border-radius:21px; -webkit-border-radius:21px;"><table style="width:100%; height:100%;"><tr><td>ПЕРЕЙТИ</td></tr></table></a>
+            	</div>
+                          </div>
+          </div>
+        </div>
+      </div>
+          </div>
+  </div>
+</div>
+<script type="text/javascript">
+$(document).ready(function(){
+  setInterval(function(){t422_setHeight('28365672');}, 5000);
+  t422_setHeight('28365672');
+});
+var t422__doResize;
+$(window).resize(function(){
+  clearTimeout(t422__doResize);
+    t422__doResize = setTimeout(function() {
+      t422_setHeight('28365672');
+    }, 200);
+});
+$(window).load(function(){
+  t422_setHeight('28365672');
+});
+  
+$('.t422').bind('displayChanged',function(){
+	t422_setHeight('28365672');
+});  
+</script>
+
+</div>
+
 
 <div id="rec27507550" class="r" style="padding-top:28px;padding-bottom:28px; "  data-record-type="40"   >
 <!-- T026 -->
@@ -23,6 +72,77 @@
 		</div>
 	</div>
 </div>
+</div>
+
+
+<div id="rec28365982" class="r" style="padding-top:75px;padding-bottom:75px; " data-animationappear="off" data-record-type="422"   >
+<!-- T422 -->
+<div class="t422">
+  <div class="t422__container t-container">
+    <div class="t422__wrapper t-width_12 t422__prefix t-prefix_1">
+      <div class="t422__img-mobile t-col t-bgimg" bgimgfield="img" data-original="images/tild6166-6238-4438-b837-333631633434__lucrarescrisa.jpg" style="background-image: url('images/tild6166-6238-4438-b837-333631633434__-__resize__20x__lucrarescrisa.jpg');"></div>
+              <div class="t422__img t422__col  t422__col_3 t-col t-bgimg" bgimgfield="img" data-original="images/tild6166-6238-4438-b837-333631633434__lucrarescrisa.jpg" style="background-image: url('images/tild6166-6238-4438-b837-333631633434__-__resize__20x__lucrarescrisa.jpg'); "></div>
+            <div class="t422__text t422__col  t422__col_7 t-col  t422__text_right" style="border-color: #e6e6e6; border-width: 1px; ">
+        <div class="t422__text_mobile t-col" style="border-color: #e6e6e6; border-width: 1px;">
+        <div class="t422__textwrapper">
+            <div class="t422__cell t-cell">
+                                          <div class="t422__title t-heading t-heading_md " field="title"  style="">
+                Об авторах
+              </div>                            <div class="t422__descr t-descr t-descr_sm " field="descr"  style="">
+                Авторский состав
+              </div>                              <div class="t422__btn-wrapper ">
+              	  <a href="http://tilda.cc" target="" class="t-btn t-btn_sm" style="color:#000000;border:1px solid #000000;border-radius:21px; -moz-border-radius:21px; -webkit-border-radius:21px;"><table style="width:100%; height:100%;"><tr><td>ПЕРЕЙТИ</td></tr></table></a>
+            	</div>
+                          </div>
+          </div>
+        </div>
+      </div>
+          </div>
+  </div>
+</div>
+<script type="text/javascript">
+$(document).ready(function(){
+  setInterval(function(){t422_setHeight('28365982');}, 5000);
+  t422_setHeight('28365982');
+});
+var t422__doResize;
+$(window).resize(function(){
+  clearTimeout(t422__doResize);
+    t422__doResize = setTimeout(function() {
+      t422_setHeight('28365982');
+    }, 200);
+});
+$(window).load(function(){
+  t422_setHeight('28365982');
+});
+  
+$('.t422').bind('displayChanged',function(){
+	t422_setHeight('28365982');
+});  
+</script>
+
+</div>
+
+
+<div id="rec28365278" class="r" style="padding-top:0px;padding-bottom:15px; "  data-record-type="191"   >
+<!-- T142 -->
+<div class="t142">
+	<div class="t-container_100">
+	  <div class="t142__wrapone">
+		<div class="t142__wraptwo">
+          <a href="index.html" target=""><div class="t-btn t142__submit " style="color:#ffffff;border:3px solid #922e74;background-color:#922e74;border-radius:30px; -moz-border-radius:30px; -webkit-border-radius:30px;">ВЕРНУТЬСЯ В МЕНЮ</div></a>
+        </div>
+	  </div>
+	</div>
+</div>
+
+<script type="text/javascript">
+  $(document).ready(function() {
+    t142_checkSize('28365278');
+  });
+</script>
+
+
 </div>
 
 </div>
