--- a/files/page1350340body.html
+++ b/files/page1350340body.html
@@ -1,6 +1,57 @@
 <!--allrecords-->
 <div id="allrecords" class="t-records" data-hook="blocks-collection-content-node" data-tilda-project-id="293604" data-tilda-page-id="1350340" data-tilda-page-alias="zkh/1" data-tilda-formskey="970f9e2c6c552c5b2a73c4b3835258a7" >
 
+<div id="rec28368844" class="r" style="padding-top:75px;padding-bottom:75px; " data-animationappear="off" data-record-type="422"   >
+<!-- T422 -->
+<div class="t422">
+  <div class="t422__container t-container">
+    <div class="t422__wrapper t-width_12 t422__prefix t-prefix_1">
+      <div class="t422__img-mobile t-col t-bgimg" bgimgfield="img" data-original="images/tild3666-3064-4432-a432-643030366161__00dfd63c3579f2803adfb126f2420357.png" style="background-image: url('images/tild3666-3064-4432-a432-643030366161__-__resize__20x__00dfd63c3579f2803adfb126f2420357.png');"></div>
+              <div class="t422__img t422__col  t422__col_3 t-col t-bgimg" bgimgfield="img" data-original="images/tild3666-3064-4432-a432-643030366161__00dfd63c3579f2803adfb126f2420357.png" style="background-image: url('images/tild3666-3064-4432-a432-643030366161__-__resize__20x__00dfd63c3579f2803adfb126f2420357.png'); "></div>
+            <div class="t422__text t422__col  t422__col_7 t-col  t422__text_right" style="border-color: #e6e6e6; border-width: 1px; ">
+        <div class="t422__text_mobile t-col" style="border-color: #e6e6e6; border-width: 1px;">
+        <div class="t422__textwrapper">
+            <div class="t422__cell t-cell">
+                            <div class="t422__uptitle t-uptitle t-uptitle_md t-uppercase " field="subtitle" style="">
+                Информационно-справочное пособие № 1
+        	  </div>                            <div class="t422__title t-heading t-heading_md " field="title"  style="">
+                <strong>Способы управления многоквартирным жилым домом</strong>
+              </div>                            <div class="t422__descr t-descr t-descr_sm " field="descr"  style="">
+                Деятельность по управлению многоквартирными домами осуществляется на основании лицензии на ее осуществление, за исключением случая осуществления такой деятельности товариществом собственников жилья, жилищным кооперативом или иным специализированным потребительским кооперативом. <br />
+              </div>                              <div class="t422__btn-wrapper ">
+              	  <a href="http://tilda.cc" target="" class="t-btn t-btn_sm" style="color:#000000;border:1px solid #000000;border-radius:21px; -moz-border-radius:21px; -webkit-border-radius:21px;"><table style="width:100%; height:100%;"><tr><td>ПЕРЕЙТИ</td></tr></table></a>
+            	</div>
+                          </div>
+          </div>
+        </div>
+      </div>
+          </div>
+  </div>
+</div>
+<script type="text/javascript">
+$(document).ready(function(){
+  setInterval(function(){t422_setHeight('28368844');}, 5000);
+  t422_setHeight('28368844');
+});
+var t422__doResize;
+$(window).resize(function(){
+  clearTimeout(t422__doResize);
+    t422__doResize = setTimeout(function() {
+      t422_setHeight('28368844');
+    }, 200);
+});
+$(window).load(function(){
+  t422_setHeight('28368844');
+});
+  
+$('.t422').bind('displayChanged',function(){
+	t422_setHeight('28368844');
+});  
+</script>
+
+</div>
+
+
 <div id="rec28068702" class="r" style="padding-top:28px;padding-bottom:28px; "  data-record-type="40"   >
 <!-- T026 -->
 <div class="t026">
@@ -40,6 +91,79 @@
 		</div>
 	</div>
 </div>
+</div>
+
+
+<div id="rec28368874" class="r" style="padding-top:75px;padding-bottom:75px; " data-animationappear="off" data-record-type="422"   >
+<!-- T422 -->
+<div class="t422">
+  <div class="t422__container t-container">
+    <div class="t422__wrapper t-width_12 t422__prefix t-prefix_1">
+      <div class="t422__img-mobile t-col t-bgimg" bgimgfield="img" data-original="images/tild3066-6430-4335-a566-306362623162__skolkonuzhnoplatitzazhkxposlepodorozhaniyakotoroeproizoshlo1iyulya2016goda.jpg" style="background-image: url('images/tild3066-6430-4335-a566-306362623162__-__resize__20x__skolkonuzhnoplatitzazhkxposlepodorozhaniyakotoroeproizoshlo1iyulya2016goda.jpg');"></div>
+              <div class="t422__img t422__col  t422__col_3 t-col t-bgimg" bgimgfield="img" data-original="images/tild3066-6430-4335-a566-306362623162__skolkonuzhnoplatitzazhkxposlepodorozhaniyakotoroeproizoshlo1iyulya2016goda.jpg" style="background-image: url('images/tild3066-6430-4335-a566-306362623162__-__resize__20x__skolkonuzhnoplatitzazhkxposlepodorozhaniyakotoroeproizoshlo1iyulya2016goda.jpg'); "></div>
+            <div class="t422__text t422__col  t422__col_7 t-col  t422__text_right" style="border-color: #e6e6e6; border-width: 1px; ">
+        <div class="t422__text_mobile t-col" style="border-color: #e6e6e6; border-width: 1px;">
+        <div class="t422__textwrapper">
+            <div class="t422__cell t-cell">
+                            <div class="t422__uptitle t-uptitle t-uptitle_md t-uppercase " field="subtitle" style="">
+                Информационно-справочное пособие № 2
+        	  </div>                            <div class="t422__title t-heading t-heading_md " field="title"  style="">
+                <strong>Оплата коммунальных услуг: <br /><span style="font-size: 28px;">холодная/горячая вода, электричество, газ</span></strong>
+              </div>                            <div class="t422__descr t-descr t-descr_sm " field="descr"  style="">
+                С 01.01.2017 в состав платы за содержание жилого помещения включаются расходы на оплату холодной воды, горячей воды, электрической энергии в целях содержания общего имущества в многоквартирном доме.
+              </div>                              <div class="t422__btn-wrapper ">
+              	  <a href="http://tilda.cc" target="" class="t-btn t-btn_sm" style="color:#000000;border:1px solid #000000;border-radius:21px; -moz-border-radius:21px; -webkit-border-radius:21px;"><table style="width:100%; height:100%;"><tr><td>ПЕРЕЙТИ</td></tr></table></a>
+            	</div>
+                          </div>
+          </div>
+        </div>
+      </div>
+          </div>
+  </div>
+</div>
+<script type="text/javascript">
+$(document).ready(function(){
+  setInterval(function(){t422_setHeight('28368874');}, 5000);
+  t422_setHeight('28368874');
+});
+var t422__doResize;
+$(window).resize(function(){
+  clearTimeout(t422__doResize);
+    t422__doResize = setTimeout(function() {
+      t422_setHeight('28368874');
+    }, 200);
+});
+$(window).load(function(){
+  t422_setHeight('28368874');
+});
+  
+$('.t422').bind('displayChanged',function(){
+	t422_setHeight('28368874');
+});  
+</script>
+
+</div>
+
+
+<div id="rec28368958" class="r" style="padding-top:0px;padding-bottom:15px; "  data-record-type="191"   >
+<!-- T142 -->
+<div class="t142">
+	<div class="t-container_100">
+	  <div class="t142__wrapone">
+		<div class="t142__wraptwo">
+          <a href="index.html" target=""><div class="t-btn t142__submit " style="color:#ffffff;border:3px solid #922e74;background-color:#922e74;border-radius:30px; -moz-border-radius:30px; -webkit-border-radius:30px;">ВЕРНУТЬСЯ В МЕНЮ</div></a>
+        </div>
+	  </div>
+	</div>
+</div>
+
+<script type="text/javascript">
+  $(document).ready(function() {
+    t142_checkSize('28368958');
+  });
+</script>
+
+
 </div>
 
 </div>
